# ChangeLog for media-video/ffmpeg
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.35 2004/06/07 17:14:06 lv Exp $

  07 Jun 2004; Travis Tilley <lv@gentoo.org> ffmpeg-0.4.8.20040322.ebuild:
  stable on amd64

  05 Jun 2004; <tester@gentoo.org> ffmpeg-0.4.8.20040322.ebuild:
  No longer available from SRC_URI, changed the keywords to -*.. oops
  we have it on our mirrors... sorry..

  30 Mar 2004; Sven Blumenstein <bazik@gentoo.org>
  ffmpeg-0.4.8.20040322.ebuild:
  Stable on sparc.

  26 Mar 2004; Joel Martin <kanaka@gentoo.org> ffmpeg-0.4.8.20040222.ebuild,
  ffmpeg-0.4.8.20040322.ebuild:
  Filter out -momit-leaf-frame-pointer flag from libpostproc compilation

*ffmpeg-0.4.8.20040322 (22 Mar 2004)

  22 Mar 2004; Luca Barbato <lu_zero@gentoo.org> ffmpeg-0.4.8.20040322.ebuild:
  New snapshot, works with ppc

  15 Mar 2004; Luca Barbato <lu_zero@gentoo.org> ffmpeg-0.4.8.20040222.ebuild:
  Marked -ppc pending a fix for misbuild.

*ffmpeg-0.4.8.20040222 (11 Mar 2004)

  11 Mar 2004; <kanaka@gentoo.org> ffmpeg-0.4.8.20040222.ebuild:
  Install libpostproc library. Update to newer snapshot. Bug 27051

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> ffmpeg-0.4.8.ebuild:
  stable on alpha and ia64

  16 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> ffmpeg-0.4.8.ebuild:
  set ppc in keywords

  29 Nov 2003; Brad House <brad_mssw@gentoo.org> ffmpeg-0.4.8.ebuild:
  amd64 needs -fPIC to compile properly

  22 Nov 2003; Luca Barbato <lu_zero@gentoo.org> ffmpeg-0.4.8.ebuild:
  altivec related fix, thanks to Olivier <ocastan@noos.fr> for the report
  and the patch

*ffmpeg-0.4.8 (18 Oct 2003)

  18 Oct 2003; <iggy@gentoo.org> ffmpeg-0.4.8.ebuild:
  version bump, fix a bug where it was trying to include X11/Xlib.h for no
  apparent reason

*ffmpeg-0.4.7 (09 Sep 2003)

  09 Sep 2003; Martin Holzer <mholzer@gentoo.org> ffmpeg-0.4.7.ebuild:
  Version bumped.
