@@ -1,11 +1,13 @@
 MD5 84a27708e863d4c3fe8f2c99f1a05a40 ffmpeg-0.4.8.20040222.ebuild 3300
 MD5 c47ffd4762bbd81606974cc39a507a87 ffmpeg-0.4.8.ebuild 2387
-MD5 6bb70a5fb3b12d30e251793bdf13c809 ffmpeg-0.4.8.20040322.ebuild 3294
+MD5 30631e1531d6673bfa478354d4e31bb9 ffmpeg-0.4.8.20040322.ebuild 3293
+MD5 f688a2acffa0fe87921aca24cfc9d4a7 ffmpeg-0.4.8.20040322-r1.ebuild 3380
 MD5 f08417b78b86be6de292fd739077ef67 ffmpeg-0.4.7.ebuild 2182
-MD5 df16bff758921ddc253ca6b062640d57 ChangeLog 5297
+MD5 aabaa2206341907cb47a8cb1ed4201a8 ChangeLog 5296
 MD5 7300a7b361fa9f48e37722c6952bd432 metadata.xml 158
 MD5 6f1d9c82b5e8c3b7c46b80bc3c1bb443 files/alpha-idct.patch 777
 MD5 77014ea836fa26b88ebae7c85c912059 files/ffmpeg-0.4.7-2.6.patch 491
+MD5 d96905e9b38176623d31ad3cffbc63fd files/digest-ffmpeg-0.4.8.20040322-r1 69
 MD5 7eca667f050b6c515830ff9be05bacc6 files/digest-ffmpeg-0.4.7 65
 MD5 0a76b7a4442aea90d56ac85508b2eff5 files/digest-ffmpeg-0.4.8 65
 MD5 56615d0a04f7435f464f01f8bed50c50 files/digest-ffmpeg-0.4.8.20040222 69
