@@ -1,6 +1,13 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.35 2004/06/07 17:14:06 lv Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.36 2004/06/09 15:02:44 lordvan Exp $
+
+*ffmpeg-0.4.8.20040322-r1 (09 Jun 2004)
+
+  09 Jun 2004; Thomas Raschbacher <lordvan@gentoo.org>
+  +ffmpeg-0.4.8.20040322-r1.ebuild:
+  -r1 adds faac support, added local USE flag
+  fixes bug #48090, thanks to Stefan Briesenick <sbriesen@gmx.de>
 
   07 Jun 2004; Travis Tilley <lv@gentoo.org> ffmpeg-0.4.8.20040322.ebuild:
   stable on amd64
